--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,10 @@
 
   gtag('config', 'G-LWXDPT250W');
 </script>
+{% if site.ga_adsense %}
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client={{ site.ga_adsense }}"
+     crossorigin="anonymous"></script>
+{% endif %}
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
